Fix spacing

--- a/books/static/books/book.css
+++ b/books/static/books/book.css
@@ -1,6 +1,8 @@
 .info{
     margin-left: 30px;
     margin-right: 30px;
+    margin-bottom: 40px;
+    overflow: hidden;
 }
 
 .ratings {
